# compute-starter-kit-rust-connect-google-bigquery

./: Cargo.toml  README.md  fastly.toml
src/: config.rs  config.toml  gcp.rs  main.rs
