[package]
name = "fastly-compute-project"
version = "0.2.0"
authors = ["oss@fastly"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
fastly = "^0.9.2"
log-fastly = "^0.9.2"
log = "^0.4.17"
rand = "^0.8.5"
serde = { version = "^1.0.159", features = ["derive"] }
serde_json = "^1.0.95"
base64 = "^0.21.0"
toml = "^0.7.3"
jwt-simple = "^0.11.4"
anyhow = "^1.0"
once_cell = "^1.17.1"
hex = "^0.4"
time = { version = "^0.3.20", features = ["formatting", "parsing"] }
urlencoding = "^2.1.2"
regex = "^1.7.3"
