[package]
name = "fastly-compute-project"
version = "0.2.0"
authors = ["oss@fastly"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
fastly = "0.9.0"
log-fastly = "0.9.0"
log = "^0.4.20"
rand = "^0.8.5"
serde = { version = "^1.0.189", features = ["derive"] }
serde_json = "^1.0.107"
base64 = "^0.21.5"
toml = "^0.8.4"
jwt-simple = "^0.11.7"
anyhow = "^1.0"
once_cell = "^1.18.0"
hex = "^0.4.3"
time = { version = "^0.3.23", features = ["formatting", "parsing"] }
urlencoding = "^2.1.3"
regex = "^1.10.2"
